--- a/app/src/main/res/layout/activity_main_guard.xml
+++ b/app/src/main/res/layout/activity_main_guard.xml
@@ -17,48 +17,271 @@
 
     <!--타이틀바-->
     <LinearLayout
+        android:id="@+id/fra_mypage_title_bar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/white"
         android:orientation="horizontal">
+
+        <ImageView
+            android:src="@drawable/ic_nav_open"
+            android:id="@+id/button_nav"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingHorizontal="15dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="left|center"
-            android:paddingHorizontal="15dp"
-            android:text="도우미 화면"
+            android:text="Safe Home Comming"
             android:textColor="@color/black"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:textSize="17sp"/>
 
-        <TextView
+
+        <Button
+            android:id="@+id/citizeninfo"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="left|center"
             android:paddingHorizontal="15dp"
-            android:text="(button)"
+            android:text="요청자 정보"
             android:textColor="@color/black"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:background="@drawable/item_edit_text_black"
+            android:textSize="17sp"
+            android:layout_margin="20px"
+            android:visibility="invisible"
+             />
 
     </LinearLayout>
 
+    <View
+        android:background="@color/gray"
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"/>
+
     <!--화면 하단 버튼-->
 
-    <TextView
+    <View
+        android:background="@color/gray"
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"/>
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:padding="10dp"
         android:layout_weight="1"
-        android:layout_gravity="bottom|center"
-        android:background="@color/white"
-        android:paddingHorizontal="15dp"
-        android:text="button"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        android:layout_gravity="bottom|center">
+        <LinearLayout
+            android:id="@+id/matchwait_lay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_gravity="bottom|center"
+            android:background="@color/white"
+            >
+            <Button
+                android:id="@+id/button_request_safe_guard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="매칭 대기 하기"
+                android:textColor="@color/black"
+                android:background="@android:color/transparent"
+                android:textSize="20dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/matchok_lay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_gravity="bottom|center"
+            android:background="@color/white"
+            android:visibility="invisible"
+            >
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="80px"
+                android:layout_weight="2"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginVertical="30px"
+                    android:layout_weight="1">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="17sp"
+                        android:text="남은 귀가 거리 : "
+                        android:layout_gravity="center"
+                        android:textColor="@android:color/background_dark"/>
+                    <TextView
+                        android:id="@+id/textdistance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="60px"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:layout_gravity="center"
+                        android:text="200m"/>
+                    <ImageView
+                        android:id="@+id/phonebtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/call_32"
+                        android:background="@drawable/item_edit_text_black"
+                        android:padding="20px"
+                        android:layout_marginLeft="20px"
+                        />
+                </LinearLayout>
+            </LinearLayout>
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="10px"
+                android:background="@android:color/black"/>
+
+            <Button
+                android:id="@+id/finishbtn"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:text="귀가완료"/>
+
+
+        </LinearLayout>
+
+
+
+    </FrameLayout>
+
+
+
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/nav_area"
+        android:layout_gravity="bottom"
+        android:orientation="vertical"
+        android:layout_marginBottom="70dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <!--마이페이지-->
+        <LinearLayout
+            android:id="@+id/nav_mypage"
+            android:gravity="center"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="15dp"
+            android:background="@drawable/item_edit_text_black"
+            android:orientation="vertical"
+            android:layout_width="65dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:padding="3dp"
+                android:src="@drawable/ic_person_black"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:text="마이페이지"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <!--경계모드-->
+        <LinearLayout
+            android:id="@+id/nav_boundary"
+            android:gravity="center"
+            android:layout_marginHorizontal="15dp"
+            android:background="@drawable/item_edit_text_black"
+            android:orientation="vertical"
+            android:layout_width="65dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:padding="3dp"
+                android:src="@drawable/ic_shield"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:text="경계모드"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <!--경계모드-->
+        <LinearLayout
+            android:id="@+id/nav_my_child"
+            android:gravity="center"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="15dp"
+            android:background="@drawable/item_edit_text_black"
+            android:orientation="vertical"
+            android:layout_width="65dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/eme_mode"
+                android:src="@drawable/ic_children"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:text="미아찾기"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <!--CCTV-->
+        <LinearLayout
+            android:id="@+id/nav_cctv"
+            android:gravity="center"
+            android:layout_marginHorizontal="15dp"
+            android:background="@drawable/item_edit_text_black"
+            android:orientation="vertical"
+            android:layout_width="65dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:padding="5dp"
+                android:src="@drawable/ic_cam"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:text="CCTV"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </FrameLayout>
