--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity_Login">
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -24,26 +22,21 @@
 
     <!--이메일-->
     <EditText
-        android:id="@+id/login_mail"
+        android:id="@+id/login_id"
         android:layout_marginBottom="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
         android:background="@drawable/item_edit_text_black"
         android:gravity="center"
-        android:hint="이메일"
+        android:hint="아이디"
         android:inputType="textEmailAddress"
         android:padding="8dp"
         android:textColor="@color/gray"
         android:textColorHint="@color/gray"
         android:textSize="20dp" />
 
-    <!--</com.google.android.material.textfield.TextInputLayout>-->
 
-    <!--<com.google.android.material.textfield.TextInputLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:textColorHint="@color/white">-->
 
     <!--비밀번호-->
     <EditText
@@ -60,14 +53,6 @@
         android:textColorHint="@color/gray"
         android:textSize="20dp" />
 
-    <!--</com.google.android.material.textfield.TextInputLayout>-->
-
-    <ProgressBar
-        android:id="@+id/login_loading"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:visibility="gone" />
 
     <!--실제 로그인 버튼-->
     <Button
@@ -81,39 +66,18 @@
         android:textSize="20dp" />
 
     <!--가입버튼-->
-    <TextView
+    <Button
         android:id="@+id/go_reg"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/item_edit_text_black"
-        android:gravity="center"
-        android:paddingHorizontal="10dp"
-        android:paddingVertical="5dp"
         android:text="가입하기"
         android:textColor="@color/gray"
-        android:textSize="12dp" />
+        android:textSize="15dp"
+        android:visibility="invisible"/>
 
-    <!--임시 로그인 버튼-->
-    <Button
-        android:id="@+id/citizon"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/item_edit_text_black"
-        android:text="시민 로그인"
-        android:textSize="20dp" />
 
-    <Button
-        android:id="@+id/guard"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/item_edit_text_black"
-        android:text="도우미 로그인"
-        android:textSize="20dp" />
 
 </LinearLayout>
