--- a/app/src/main/res/layout/activity_main_citizen.xml
+++ b/app/src/main/res/layout/activity_main_citizen.xml
@@ -15,6 +15,122 @@
         android:layout_height="match_parent"
         tools:context=".MapsActivity" />
 
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/nav_area"
+        android:layout_gravity="bottom"
+        android:orientation="vertical"
+        android:layout_marginBottom="70dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <!--마이페이지-->
+        <LinearLayout
+            android:id="@+id/nav_mypage"
+            android:gravity="center"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="15dp"
+            android:background="@drawable/item_edit_text_black"
+            android:orientation="vertical"
+            android:layout_width="65dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:padding="3dp"
+                android:src="@drawable/ic_person_black"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:text="마이페이지"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <!--경계모드-->
+        <LinearLayout
+            android:id="@+id/nav_boundary"
+            android:gravity="center"
+            android:layout_marginHorizontal="15dp"
+            android:background="@drawable/item_edit_text_black"
+            android:orientation="vertical"
+            android:layout_width="65dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:padding="3dp"
+                android:src="@drawable/ic_shield"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:text="경계모드"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <!--경계모드-->
+        <LinearLayout
+            android:id="@+id/nav_my_child"
+            android:gravity="center"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="15dp"
+            android:background="@drawable/item_edit_text_black"
+            android:orientation="vertical"
+            android:layout_width="65dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:src="@drawable/ic_children"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:text="미아찾기"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <!--CCTV-->
+        <LinearLayout
+            android:id="@+id/nav_cctv_c"
+            android:gravity="center"
+            android:layout_marginHorizontal="15dp"
+            android:background="@drawable/item_edit_text_black"
+            android:orientation="vertical"
+            android:layout_width="65dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:padding="5dp"
+                android:src="@drawable/ic_cam"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:text="CCTV"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
     <!--타이틀바-->
     <LinearLayout
         android:id="@+id/fra_mypage_title_bar"
@@ -23,26 +139,41 @@
         android:background="@color/white"
         android:orientation="horizontal">
 
+        <ImageView
+            android:src="@drawable/ic_nav_open"
+            android:id="@+id/button_nav"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:paddingHorizontal="15dp"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="left|center"
-            android:paddingHorizontal="15dp"
             android:text="Safe Home Comming"
             android:textColor="@color/black"
             android:textSize="20dp"/>
 
+        <ImageView
+            android:src="@drawable/ic_person_male"
+            android:id="@+id/helper_icon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="5dp"
+            android:paddingHorizontal="5dp"/>
+
 
         <TextView
+            android:visibility="gone"
+            android:id="@+id/button_my_guard_info"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="left|center"
             android:paddingHorizontal="15dp"
             android:text="(button)"
             android:textColor="@color/black"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:textSize="20dp"/>
 
     </LinearLayout>
 
@@ -52,7 +183,6 @@
         android:layout_height="0.1dp"/>
 
     <!--화면 하단 버튼-->
-
     <View
         android:background="@color/gray"
         android:layout_width="match_parent"
@@ -68,9 +198,8 @@
         android:layout_gravity="bottom|center"
         android:background="@color/white"
         android:paddingHorizontal="15dp"
-        android:text="안심 귀가 도우미 호출"
+        android:text="안심이 호출"
         android:textColor="@color/black"
-        android:textSize="20dp"
-        />
+        android:textSize="20dp" />
 
 </FrameLayout>
