--- a/app/src/main/res/layout/activity_success_guard_request.xml
+++ b/app/src/main/res/layout/activity_success_guard_request.xml
@@ -25,7 +25,7 @@
             android:padding="15dp"
             android:background="@color/white"
             android:paddingHorizontal="15dp"
-            android:text="안심 귀가 도우미와\n\n 연결 되었습니다!"
+            android:text="안심이와\n\n 연결 되었습니다 :)"
             android:textColor="#59B088"
             android:textSize="20dp" />
 
@@ -56,13 +56,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    android:padding="15dp"
+                    android:padding="10dp"
                     android:paddingHorizontal="15dp"
-                    android:text="남성 도우미가 곧 도착합니다"
+                    android:text="출발 지점에서 잠시 기다려 주세요\n\n곧 도착합니다"
                     android:textColor="@color/black"
-                    android:textSize="18dp" />
+                    android:textSize="17dp" />
 
                 <TextView
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
@@ -106,6 +107,7 @@
             android:layout_height="0.1dp"/>
 
         <TextView
+            android:id="@+id/button_cancel_success_guard_request"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
